# sdlc-ai

./: .gitignore  architecture.py  commented.py  config.yaml  config2.yaml  main.py  pyproject.toml  requirements.py  skeletons.py  test.py  utils.py
src/: Knowledge.json  pyproject.toml  req.json  requirements.txt  setup.py
src/sdlc_ai_project/: __init__.py  crew.py  llms.py  main.py  memory.py  sdlc_runner.py  test.py  tools.py  utils.py
src/sdlc_ai_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdlc_ai_project/agents/: architecture.py  generator.py  knowledge.py  requirements.py  skeletons.py
src/sdlc_ai_project/config/: agents.yaml  config.yaml  tasks.yaml
src/sdlc_ai_project/tests/: __init__.py  test.json  test_code_research_tool.py  test_codedocs.py  test_github.py  test_knowledge_agent.py  test_llm.py  test_llms.py  test_requirement_analyst.py  test_serper.py  test_tools.py
src/sdlc_ai_project/todo/: Knowledge.json
src/sdlc_ai_project/todo2/: Architecture.json  Generator.json  Knowledge.json  Requirements.json  Skeletons.json
src/sdlc_ai_project/todo3/: Knowledge.json
src/sdlc_ai_project/todo4/: Knowledge.json
src/sdlc_ai_project/todo7/: Knowledge.json
src/sdlc_ai_project/todo8/: Architecture.json  Knowledge.json  Requirements.json
src/sdlc_ai_project/validation_logs/: architecture_blueprint_task_modified.json  architecture_validation_task_modified.json  build_knowledge_base_modified.json  extraction_task_modified.json  (+12 more)
src/todo/: Architecture.json  Generator.json  Knowledge.json  Requirements.json  Skeletons.json
(+1 files in other folders)
