[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlc_ai_project"
version = "0.1.0"
description = "AI-powered Software Development Lifecycle Project"
requires-python = ">=3.8"
dependencies = [
    "crewai>=0.105.0",
    "crewai-tools>=0.40.1",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.2",
    "typing-extensions>=4.9.0",
    "typing-inspect>=0.9.0",
    "mypy-extensions>=1.0.0",
    "python-dateutil>=2.8.2",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.0",
]

[tool.setuptools]
packages = ["sdlc_ai_project"] 